fix second typo in gunicorn config

--- a/deploy_tools/gunicorn-systemd.template.service
+++ b/deploy_tools/gunicorn-systemd.template.service
@@ -9,7 +9,7 @@ EnvironmentFile=/home/ubuntu/sites/DOMAIN/.env
 
 ExecStart=/home/ubuntu/sites/DOMAIN/virtualenv/bin/gunicorn \
     --bind unix:/tmp/DOMAIN.socket \
-    superlists.wsgi:application
+    togedo.wsgi:application
 
 [Install]
 WantedBy=multi-user.target
